[gd_scene load_steps=5 format=3 uid="uid://bkmcqoxxa01l3"]

[ext_resource type="Texture2D" uid="uid://bp57ssspdivoy" path="res://icon.svg" id="1_fiu55"]
[ext_resource type="Script" path="res://skeleton/skeleton_melee.gd" id="1_m040p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dwarc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ycmps"]
radius = 0.65

[node name="SkeletonMelee" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 7
input_ray_pickable = false
script = ExtResource("1_m040p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_dwarc")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25)
billboard = 1
shaded = true
no_depth_test = true
texture_filter = 4
texture = ExtResource("1_fiu55")

[node name="HitArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 8
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea"]
shape = SubResource("CapsuleShape3D_ycmps")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
aabb = AABB(-0.5, -1, -0.5, 1, 2, 1)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
debug_enabled = true

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
